--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@prisma/client": "^6.16.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.1",
+    "better-auth": "^1.3.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
+    "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
