--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
+    "lint": "eslint --fix",
+    "format": "prettier ./ --write"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tabler/icons-react": "^3.34.1",
-    "better-auth": "^1.3.9",
+    "@tabler/icons-react": "^3.35.0",
+    "better-auth": "^1.3.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.12",
+    "motion": "^12.23.15",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -29,15 +29,24 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "prisma": "^6.16.1",
-    "tsx": "^4.20.5",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "^5.9.2",
-    "@types/node": "^20.19.14",
+    "@eslint/compat": "^1.3.2",
+    "@next/eslint-plugin-next": "15.5.3",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^20.19.17",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@tailwindcss/postcss": "^4.1.13",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "15.5.3",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-check-file": "^3.3.0",
+    "eslint-plugin-n": "^17.23.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
-    "@biomejs/biome": "2.2.0"
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5.9.2"
   }
 }
